# ITAPK

./: README.md
10_C++11/C++11Select/NewBasicFacilities/: SConstruct  newalgo.cpp
10_C++11/C++11Select/Threading/: SConstruct  async_algo.cpp
10_C++11/C++11SelectOwn/NewBasicFacilities/: CMakeLists.txt
11_C++Embedded/MyAllocator/: SConstruct  SmallObjectAllocator.hpp  SmallObjectHeap.hpp  main.cpp
11_C++Embedded/MyAllocatorOwn/: CMakeLists.txt  SmallObjectAllocator.h  SmallObjectHeap.h  main.cpp
1_2_3_Intro/SharedPointer/: CMakeLists.txt  Helper.h  SharedPtr.h  main.cpp
4_Exceptions/Exceptions/: CMakeLists.txt  DataSet.h  LogFile.cpp  LogFile.h  MyArray.h  MyVector.h  ProgramTransformation.cpp  String.h  Test.h  main.cpp
5_Containers/Containers/: Product.h  main.cpp
6_Boost/TimerCallback/: BindFunction.h  CMakeLists.txt  Events.h  Timer.h  main.cpp
7_8_MetaProgramming/Binary/: CMakeLists.txt  main.cpp
9_BoostState/CoolRadio/GuardedTransInCustomReact/: CMakeLists.txt  main.cpp
9_BoostState/CoolRadio/History/: CMakeLists.txt  main.cpp
9_BoostState/CoolRadio/InstateStateInformation/: CMakeLists.txt  main.cpp
9_BoostState/CoolRadio/MultipleHierarchicalStates/: CMakeLists.txt  main.cpp
9_BoostState/CoolRadio/SimpleStates/: CMakeLists.txt  main.cpp
9_BoostState/Radio/GuardedTransInCustomReact/: radio.cpp
9_BoostState/Radio/History/: SConstruct  radio.cpp
9_BoostState/Radio/InstateStateInformation/: radio.cpp
9_BoostState/Radio/MultipleHierarchicalStates/: radio.cpp
9_BoostState/Radio/SimpleStates/: radio.cpp
Containers_algorithms_and_iterators/: CMakeLists.txt  Product.h
Exam/: CMakeLists.txt  Element.h  Game.cpp  Game.h  GameState.h  IItem.h  IMove.h  IMoveSet.h  IPokemon.h  Item.cpp  Item.h  Move.cpp  Move.h  MoveChoosers.h  MoveSets.h  NoFavoritePokemonException.h  Player.cpp  Player.h  Pokemon.cpp  Pokemon.h  Shop.cpp  Shop.h  macro.h  main.cpp  pokemonState.h
Exam/Elements/: Element.h  Elements.h  Fire.cpp  Fire.h  Grass.h  Ground.cpp  Ground.h  Lightning.cpp  Lightning.h  Water.h
Exam/Game/: Game.cpp  Game.h  macro.h
Exam/Game/Exception/: NoFavoritePokemonException.h  NoNamePokemonException.h
Exam/Game/Items/: IItem.h  ItemNames.h  Pokeball.cpp  Pokeball.h  Potion.cpp  Potion.h  Revive.cpp  Revive.h
Exam/Game/Player/: Player.cpp  Player.h
Exam/Game/Pokemon/: IPokemon.h  Pokemon.cpp  Pokemon.h
Exam/Game/Pokemon/Elements/: Fire.cpp  Fire.h  Grass.cpp  Grass.h  Ground.cpp  Ground.h  IElement.cpp  IElement.h  Lightning.cpp  Lightning.h  Water.cpp  Water.h
Exam/Game/Pokemon/Moves/: IMove.h  IMoveSet.h  Move.cpp  Move.h  MoveChoosers.h
Exam/Game/Pokemon/Moves/MoveSets/: GrassMoveSet.cpp  GroundMoveSet.h  LightningMoveSet.cpp
Exam/Game/Shop/: Shop.cpp  Shop.h
Exam/Game/States/: GameState.h  pokemonState.h  printStates.h
Exam/Moves/: Move.h  MoveChoosers.h
Exam/Moves/MoveSets/: FireMoveSet.cpp  FireMoveSet.h  GrassMoveSet.h  GroundMoveSet.cpp  LightningMoveSet.h  WaterMoveSet.cpp  WaterMoveSet.h
